# dawn-spec

./: .cursorrules  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LOGGING_SYSTEM.md  README.md  REFACTORING_BENEFITS.md  REFACTORING_PLAN.md  dawn_cli.py  generate_protos.py  pyproject.toml  pytest.ini  requirements-langgraph.txt  requirements.txt  setup.py  template.env  test_gemini.py
config/: agent_config.yaml  llm_config.yaml
docs/: TEST_SUITE.md  demo_plan.md  design.md  testing_guide.md
docs/images/: dawn_architecture.txt
docs/scratchpad/: manifest.jsonc
examples/: README_LANGGRAPH.md  a2a_interop_demo.py  a2a_langgraph_demo.py  a2a_skills_demo.py  acp_agent_example.py  agp_gateway_demo.py  anthropic_agent_demo.py  basic_agent_interaction.py  gemini_agent_demo.py  mcp_interop_demo.py  openai_agent_demo.py  pluggable_agents_demo.py  research_agent_demo.py  weather_email_demo.py
examples/agents/: __init__.py  base_langgraph_agent.py  langgraph_arxiv_agent.py  langgraph_github_agent.py  langgraph_synthesis_agent.py
examples/basic/: simple_agent.py
examples/protocols/: __init__.py
proto/: acp.proto  agp.proto
src/: __init__.py  a2a_integration.py  a2a_integration_v2.py  acp_server.py  agent.py  agent_core.py  agent_factory.py  agp_gateway.py  anthropic_agent.py  config.py  gemini_agent.py  interfaces.py  mcp_integration.py  registry.py  schemas.py
src/dawn/: __init__.py
src/dawn/agents/: __init__.py  github.py  registry.py
src/dawn/core/: __init__.py  agent.py  langgraph_agent.py
src/dawn/protocols/: __init__.py  base.py
src/dawn/protocols/acp/: __init__.py  adapter.py
src/dawn/runners/: base.py
src/dawn/utils/: logging.py
src/implementations/: __init__.py  langgraph_agent.py  text_matching_agent.py
tests/: __init__.py  conftest.py  test_anthropic_agent.py  test_interfaces.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: test_agent.py  test_agent_registry.py  test_demo_runner.py  test_github_agent.py  test_langgraph_agent.py  test_protocol_adapter.py
