[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dawn-spec"
version = "0.1.0"
description = "Implementation of the DAWN/AGNTCY specification for agent interoperability"
authors = [
    {name = "DAWN Spec Contributors"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Core dependencies
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "grpcio>=1.44.0",
    "grpcio-tools>=1.44.0",
    "protobuf>=3.19.0",
    
    # AI service client libraries
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
    
    # Research APIs
    "PyGithub>=1.59.0",
    "arxiv>=1.4.7",
    "duckduckgo-search>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0", 
    "mypy>=1.3.0",
    "ruff>=0.0.262",
]
interop = [
    # Interoperability dependencies for A2A, MCP, OASF
    "a2a-sdk",
    "mcp[cli]",
    "jsonschema>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
dawn-cli = "dawn_cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true